--- a/index.html
+++ b/index.html
@@ -378,22 +378,22 @@
         <div class="container-fluid d-flex justify-content-center">
             <div class="row w-75">
                 <div class="border col-6 col-lg-2 justify-content-center d-flex p-3 align-content-center  partner-logo">
-                    <img src="/images/html.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
+                    <img src="images/html.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
                 </div>
                 <div class="border col-6 col-md-2 justify-content-center d-flex p-3 align-content-center partner-logo">
-                    <img src="/images/cpanel.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
+                    <img src="images/cpanel.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
                 </div>
                 <div class="border col-6 col-md-2 justify-content-center d-flex p-3 align-content-center partner-logo">
-                    <img src="/images/chrome.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
+                    <img src="images/chrome.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
                 </div>
                 <div class="border col-6 col-md-2 justify-content-center d-flex p-3 align-content-center partner-logo">
-                    <img src="/images/java.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
+                    <img src="images/java.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
                 </div>
                 <div class="border col-6 col-md-2 justify-content-center d-flex p-3 align-content-center partner-logo">
-                    <img src="/images/jq.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
+                    <img src="images/jq.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
                 </div>
                 <div class="border col-6 col-md-2 justify-content-center d-flex p-3 align-content-center partner-logo">
-                    <img src="/images/msql.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
+                    <img src="images/msql.png" style="max-height: 100px; max-width: 100%; object-fit: contain;">
                 </div>
             </div>
         </div>
