--- a/index.html
+++ b/index.html
@@ -124,11 +124,14 @@
                 <li class="nav-item">
                 <a class="nav-link" href="#">Elements</a>
                 </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <li class="nav-item"> 
+                <a class="nav-link" href="#">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
             </div>
